change to inline style

--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
 </head>
 <body>
 
-<style type="text/css">
-	#engine {
-		font-weight: bold;
-	}
-</style>
-
 <script type="text/javascript">
 	function capitalizeFirstLetter(string) {
 	  return string.charAt(0).toUpperCase() + string.slice(1).toLowerCase();
@@ -59,7 +53,7 @@
 
 <p>
 	Default Engine: 
-	<span id="engine" class="capitalize">
+	<span id="engine" style="font-weight: bold;">
 		Google
 	</span>
 </p>
