--- a/index.html
+++ b/index.html
@@ -6,31 +6,44 @@
 </head>
 <body>
 
+<style type="text/css">
+	body {
+		height: 100vw;
+	}
+</style>
+
 <script type="text/javascript">
 	function capitalizeFirstLetter(string) {
 	  return string.charAt(0).toUpperCase() + string.slice(1).toLowerCase();
 	}
 	function setSearch(engine) {
 		console.log('Change search engine to ', engine);
-    searchForm.action = "http://www." + engine + ".com/search";    
+		searchEngine = engine;
+    searchForm.action = searchUrl = "http://www." + engine + ".com/search";
     engineDisplay.innerHTML = capitalizeFirstLetter(engine);          
-		search();
+		return search();
 	}
-	function search(event) {
-		console.log(event)
-		searchForm.submit();		
+	function search() {
+		if (searchEngine == 'google') {
+			searchForm.target = '_blank';
+			searchIframe.style.display = 'none';
+		} else {
+			searchForm.target = 'sf';
+			// searchIframe.src = searchUrl;
+			searchIframe.style.display = 'block';
+		}
+		return searchForm.submit();					
 	}
 </script>
 
 <form 
-	target="_blank"
 	onsubmit="search()" 
 >
 	<label for="q">
 		Web Search:
 	</label>
 	<input 
-		style="width: 55%"
+		style="width: 80%"
 		type="search" 
 		name="q" 
 		placeholder="Type some text here" 
@@ -49,19 +62,27 @@
 	>
 		Bing!
 	</button>		
+	<span>
+		Default Engine: 
+		<span id="engine" style="font-weight: bold;">
+			Google
+		</span>
+	</span>
 </span>
 
-<p>
-	Default Engine: 
-	<span id="engine" style="font-weight: bold;">
-		Google
-	</span>
-</p>
+<iframe
+	id = "searchIframe"
+	name="sf"
+	style="display: none; width: 100%; height: 90%;" 
+></iframe>
 
 <script type="text/javascript">
 	var engineDisplay = document.getElementById('engine');
+	var searchIframe = document.getElementById('searchIframe');
 	var searchForm = document.forms[0];
-	searchForm.action = "http://www.google.com/search";
+	var searchEngine = 'google';
+	searchForm.target = '_blank';
+	searchForm.action = searchUrl = "http://www.google.com/search";
 </script>
 
 </body>
