--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			searchForm.target = 'sf';
 			// searchIframe.src = searchUrl;
 			searchIframe.style.display = 'block';
+			searchIframe.style.height = document.body.clientHeight - searchIframe.offsetTop + 'px';
 		}
 		return searchForm.submit();					
 	}
@@ -73,12 +74,15 @@
 <iframe
 	id = "searchIframe"
 	name="sf"
-	style="display: none; width: 100%; height: 90%;" 
-></iframe>
+	style="display: none; width: 100%;" 
+>
+  There would be Bing Search here but your browser does not support inline frames.
+</iframe>
 
 <script type="text/javascript">
 	var engineDisplay = document.getElementById('engine');
 	var searchIframe = document.getElementById('searchIframe');
+
 	var searchForm = document.forms[0];
 	var searchEngine = 'google';
 	searchForm.target = '_blank';
