--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
 <body>
 
 <style type="text/css">
+html {
+	height: 100%;
+}
 body {
-	height: 97vh;
+	/*height: 97vh;*/
+	height: 98%;
 	margin: 0;
 }
+iframe {
+/*	border: 0;
+	margin: 0;
+*/}
 </style>
 
 <script type="text/javascript">
