--- a/index.html
+++ b/index.html
@@ -7,24 +7,39 @@
 <body>
 
 <style type="text/css">
-body, html, iframe {
-  width: 100%; 
-  height: 100%; 
-  border: none; 
-  padding: 0; 
-  margin: 0
-}
-html {
-	height: 100%;
-}
-body {
-	/*height: 97vh;*/
-	height: 98%;
-}
-iframe {
-/*	border: 0;
-	margin: 0;
-*/}
+	body, html, main {
+	  width: 100%; 
+	  height: 100%; 
+	  padding: 0; 
+	  margin: 0
+	}
+	html {
+		height: 100%;
+	}
+	iframe {
+		width: 100%;
+		border: none;
+		border-top: solid thin;
+		border-top-style: groove;
+	}
+	.margin-left-1 {
+		margin-left: 1em;
+	}
+	.flexbox {
+		display: flex;
+	}
+	.column {
+		flex-flow: column;
+	}
+	.flex-item-grow {
+		flex: 1;
+	}
+	.content-stretch {
+		align-items: stretch;
+	}
+	.bold {
+		font-weight: bold;
+	}
 </style>
 
 <script type="text/javascript">
@@ -55,50 +70,54 @@ iframe {
 	}
 </script>
 
-<main style="margin-left: 6px">
+<main class="flexbox column content-stretch">
 
-<form 
-	onsubmit="search()" 
->
-	<label for="q">
-		Web Search:
-	</label>
-	<input 
-		style="width: 80%"
-		type="search" 
-		name="q" 
-		placeholder="Type some text here" 
-		autofocus="" 
-	>	
-</form>
+	<form 
+		class="flexbox" 
+		onsubmit="search()" 
+	>
+		<label for="q">
+			Web Search:
+		</label>
+		<input 
+			class="flex-item-grow"
+			type="search" 
+			name="q" 
+			placeholder="Type some text here" 
+			autofocus="" 
+		>	
+	</form>
 
-<span style="display: inline-block;">
-	<button 
-		onclick="setSearch('google')"
-	>
-		Google!
-	</button>
-	<button 
-		onclick="setSearch('bing')"
-	>
-		Bing!
-	</button>		
-	<span>
-		Default Engine: 
-		<span id="engine" style="font-weight: bold;">
-			Google
+	<section class="flexbox">
+		<button 
+			onclick="setSearch('google')"
+		>
+			Google!
+		</button>
+		<button 
+			onclick="setSearch('bing')"
+		>
+			Bing!
+		</button>		
+		<span>
+			Default: 
+			<span id="engine" class="bold">
+				Google
+			</span>
 		</span>
-	</span>
-</span>
+	</section>
 	
+
+	<iframe
+		class="flex-item-grow"
+		name="iframe"
+		style="display: none"
+	>
+	  There would be Bing Search here but your browser does not support inline frames.
+	</iframe>
+
 </main>
 
-<iframe
-	name="iframe"
-	style="display: none"
->
-  There would be Bing Search here but your browser does not support inline frames.
-</iframe>
 
 <script type="text/javascript">
 	// var searchEngine = 'google';
