--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	input, button {
 	  font-size: .6em;
 	}
-	.margin-left-1 {
+	.margin-left, .items-ml > * ~ * {
 		margin-left: 1em;
 	}
 	.margin-left-0 {
 		margin-left: .2em;
 	}
-	.margin-top-1 {
+	.margin-top, .items-mt > * ~ * {
 		margin-top: .6em;
 	}
 	.margin-adjust {
@@ -99,15 +99,16 @@
 <main class="flexbox column ai-stretch">
 
 	<section class="padding-box">
+
 		<form 
-			class="flexbox" 
+			class="flexbox items-ml" 
 			onsubmit="search()" 
 		>
 			<label for="q">
 				Web Search:
 			</label>
 			<input 
-				class="flex-item-grow margin-left-1"
+				class="flex-item-grow"
 				type="search" 
 				name="q" 
 				placeholder="Type some text here" 
@@ -115,7 +116,7 @@
 			>	
 		</form>
 
-		<section class="flexbox ai-stretch margin-top-1">
+		<section class="flexbox ai-stretch margin-top items-ml">
 			<div class="flexbox">
 				<button 
 					onclick="setSearch('google')"
@@ -124,7 +125,7 @@
 				</button>
 			</div>
 
-			<div class="flexbox margin-left-1">
+			<div class="flexbox">
 				<button 
 					onclick="setSearch('bing')"
 				>
@@ -132,7 +133,7 @@
 				</button>
 			</div>
 
-			<span class="flexbox margin-left-1">
+			<span class="flexbox">
 				<span class="mmargin-adjust">
 					Default: 
 				</span>
@@ -142,7 +143,7 @@
 			</span>
 		</section>
 		
-		<div id="no-iframe" class="margin-top-1"></div>
+		<div id="no-iframe" class="margin-top"></div>
 
 	</section>
 
