Change to https

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	  return string.charAt(0).toUpperCase() + string.slice(1).toLowerCase();
 	}
 	function engineUrl (engine) {
-		return "http://www." + engine + ".com/search";
+		return "https://www." + engine + ".com/search";
 	}
 	function setSearch(engine) {
 		console.log('Change search engine to ', engine);
